--- a/index.html
+++ b/index.html
@@ -1,179 +1,202 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Crypto@gere - Gestion de Portefeuille</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Crypto@gere - Gestion de Portefeuille</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-<div id="clock"></div> <!-- Horloge en haut à gauche -->
-<h1>Crypto@gere</h1>
+    <div id="clock"></div> <!-- Horloge en haut à gauche -->
+    <h1>Crypto@gere</h1>
 </header>
 
 <div class="container">
-<!-- Section: Portefeuille utilisateur -->
-<div class="section">
-<h2>Mon Portefeuille</h2>
-<form id="addCryptoForm">
-<label for="crypto-select">Choisissez une cryptomonnaie :</label>
-<select id="crypto-select" required>
-<option value="">-- Sélectionnez une cryptomonnaie --</option>
-</select>
-<label for="crypto-quantity">Quantité :</label>
-<input type="number" id="crypto-quantity" placeholder="ex. 0.5" step="0.0001" class="small-input" required>
-<button type="submit">Ajouter au portefeuille</button>
-</form>
-<ul class="portfolio-list" id="portfolio-list">
-<!-- Les cryptomonnaies du portefeuille seront ajoutées ici -->
-</ul>
-<h3 id="total-value">Valeur Totale du Portefeuille : 0 €</h3>
-</div>
+    <!-- Section: Portefeuille utilisateur -->
+    <div class="section">
+        <h2>Mon Portefeuille</h2>
+        <form id="addCryptoForm">
+            <label for="crypto-select">Choisissez une cryptomonnaie :</label>
+            <select id="crypto-select" required>
+                <option value="">-- Sélectionnez une cryptomonnaie --</option>
+            </select>
+            <label for="crypto-quantity">Quantité :</label>
+            <input type="number" id="crypto-quantity" placeholder="ex. 0.5" step="0.0001" class="small-input" required>
+            <button type="submit">Ajouter au portefeuille</button>
+        </form>
+        <ul class="portfolio-list" id="portfolio-list">
+            <!-- Les cryptomonnaies du portefeuille seront ajoutées ici -->
+        </ul>
+        <h3 id="total-value">Valeur Totale du Portefeuille : 0 €</h3>
+    </div>
 </div>
 
 <script>
-// Fonction pour mettre à jour l'heure en temps réel
-function updateClock() {
-const clockElement = document.getElementById("clock");
-const now = new Date();
-clockElement.textContent = now.toLocaleTimeString();
-}
+    // Fonction pour mettre à jour l'heure en temps réel
+    function updateClock() {
+        const clockElement = document.getElementById("clock");
+        const now = new Date();
+        clockElement.textContent = now.toLocaleTimeString();
+    }
 
-setInterval(updateClock, 1000);
-updateClock();
+    setInterval(updateClock, 1000);
+    updateClock();
 
-async function fetchTop200CryptoList() {
-try {
-const response = await fetch('https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&order=market_cap_desc&per_page=200&page=1');
-const cryptos = await response.json();
-const cryptoSelect = document.getElementById("crypto-select");
-cryptos.sort((a, b) => a.name.localeCompare(b.name));
-cryptos.forEach(crypto => {
-const option = document.createElement("option");
-option.value = crypto.id;
-option.textContent = `${crypto.name} (${crypto.symbol.toUpperCase()})`;
-cryptoSelect.appendChild(option);
-});
-} catch (error) {
-console.error("Erreur lors de la récupération de la liste des cryptomonnaies :", error);
-}
-}
+    async function fetchTop200CryptoList() {
+        try {
+            const response = await fetch('https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&order=market_cap_desc&per_page=200&page=1');
+            const cryptos = await response.json();
+            const cryptoSelect = document.getElementById("crypto-select");
+            cryptos.sort((a, b) => a.name.localeCompare(b.name));
+            cryptos.forEach(crypto => {
+                const option = document.createElement("option");
+                option.value = crypto.id;
+                option.textContent = `${crypto.name} (${crypto.symbol.toUpperCase()})`;
+                cryptoSelect.appendChild(option);
+            });
+        } catch (error) {
+            console.error("Erreur lors de la récupération de la liste des cryptomonnaies :", error);
+        }
+    }
 
-fetchTop200CryptoList();
+    fetchTop200CryptoList();
 
-const addCryptoForm = document.getElementById("addCryptoForm");
-const portfolioList = document.getElementById("portfolio-list");
-const totalValueDisplay = document.getElementById("total-value");
-let portfolio = JSON.parse(localStorage.getItem("cryptoPortfolio")) || [];
+    const addCryptoForm = document.getElementById("addCryptoForm");
+    const portfolioList = document.getElementById("portfolio-list");
+    const totalValueDisplay = document.getElementById("total-value");
+    let portfolio = JSON.parse(localStorage.getItem("cryptoPortfolio")) || [];
 
-addCryptoForm.addEventListener("submit", async event => {
-event.preventDefault();
-const cryptoSelect = document.getElementById("crypto-select");
-const cryptoId = cryptoSelect.value;
-const cryptoName = cryptoSelect.options[cryptoSelect.selectedIndex].textContent;
-const cryptoQuantity = parseFloat(document.getElementById("crypto-quantity").value);
+    addCryptoForm.addEventListener("submit", async event => {
+        event.preventDefault();
+        const cryptoSelect = document.getElementById("crypto-select");
+        const cryptoId = cryptoSelect.value;
+        const cryptoName = cryptoSelect.options[cryptoSelect.selectedIndex].textContent;
+        const cryptoQuantity = parseFloat(document.getElementById("crypto-quantity").value);
 
-const existingCrypto = portfolio.find(item => item.id === cryptoId);
+        const existingCrypto = portfolio.find(item => item.id === cryptoId);
 
-if (existingCrypto) {
-existingCrypto.quantity += cryptoQuantity;
-await updateCryptoData(existingCrypto);
-} else {
-const cryptoData = await fetchCryptoPrice(cryptoId);
-if (cryptoData) {
-portfolio.push({
-id: cryptoId, name: cryptoName, quantity: cryptoQuantity,
-priceEUR: cryptoData.current_price.eur, priceUSD: cryptoData.current_price.usd,
-alertThreshold: null
-});
-}
-}
+        if (existingCrypto) {
+            existingCrypto.quantity += cryptoQuantity;
+            await updateCryptoData(existingCrypto);
+        } else {
+            const cryptoData = await fetchCryptoPrice(cryptoId);
+            if (cryptoData) {
+                portfolio.push({
+                    id: cryptoId,
+                    name: cryptoName,
+                    quantity: cryptoQuantity,
+                    priceEUR: cryptoData.current_price.eur,
+                    priceUSD: cryptoData.current_price.usd,
+                    alertThreshold: null
+                });
+            }
+        }
 
-savePortfolio();
-displayPortfolio();
-addCryptoForm.reset();
-});
+        savePortfolio();
+        displayPortfolio();
+        addCryptoForm.reset();
+    });
 
-async function fetchCryptoPrice(cryptoId) {
-try {
-const response = await fetch(`https://api.coingecko.com/api/v3/simple/price?ids=${cryptoId}&vs_currencies=eur,usd`);
-const data = await response.json();
-return { current_price: data[cryptoId] };
-} catch (error) {
-console.error("Erreur lors de la récupération du prix de la cryptomonnaie :", error);
-return null;
-}
-}
+    async function fetchCryptoPrice(cryptoId) {
+        try {
+            const response = await fetch(`https://api.coingecko.com/api/v3/simple/price?ids=${cryptoId}&vs_currencies=eur,usd`);
+            const data = await response.json();
+            return { current_price: data[cryptoId] };
+        } catch (error) {
+            console.error("Erreur lors de la récupération du prix de la cryptomonnaie :", error);
+            return null;
+        }
+    }
 
-function savePortfolio() {
-localStorage.setItem("cryptoPortfolio", JSON.stringify(portfolio));
-}
+    function savePortfolio() {
+        localStorage.setItem("cryptoPortfolio", JSON.stringify(portfolio));
+    }
 
-async function updateCryptoData(crypto) {
-const cryptoData = await fetchCryptoPrice(crypto.id);
-if (cryptoData) {
-crypto.priceEUR = cryptoData.current_price.eur;
-crypto.priceUSD = cryptoData.current_price.usd;
-}
-}
+    async function updateCryptoData(crypto) {
+        const cryptoData = await fetchCryptoPrice(crypto.id);
+        if (cryptoData) {
+            crypto.priceEUR = cryptoData.current_price.eur;
+            crypto.priceUSD = cryptoData.current_price.usd;
+        }
+    }
 
-function displayPortfolio() {
-portfolioList.innerHTML = '';
-let totalValueEUR = 0;
-let totalValueUSD = 0;
+    function displayPortfolio() {
+        portfolioList.innerHTML = '';
+        let totalValueEUR = 0;
+        let totalValueUSD = 0;
 
-portfolio.forEach((crypto, index) => {
-const totalEUR = crypto.priceEUR * crypto.quantity;
-const totalUSD = crypto.priceUSD * crypto.quantity;
-const listItem = document.createElement("li");
-listItem.className = "portfolio-item";
-listItem.innerHTML = `
-${crypto.quantity} - ${crypto.name} ${crypto.priceEUR.toFixed(2)} € / ${crypto.priceUSD.toFixed(2)} $
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Total: ${totalEUR.toFixed(2)} € / ${totalUSD.toFixed(2)} $
-<div class="alert-container">
-<label class="alert-label">Seuil d'alerte (€):</label>
-<input type="number" value="${crypto.alertThreshold || ''}"
-class="small-input" onchange="setAlertThreshold(${index}, this.value)">
-</div>
-<button class="remove-btn" onclick="removeCrypto(${index})">Supprimer</button>
-`;
-portfolioList.appendChild(listItem);
-totalValueEUR += totalEUR;
-totalValueUSD += totalUSD;
-});
+        portfolio.forEach((crypto, index) => {
+            const totalEUR = crypto.priceEUR * crypto.quantity;
+            const totalUSD = crypto.priceUSD * crypto.quantity;
+            const listItem = document.createElement("li");
+            listItem.className = "portfolio-item";
+            listItem.innerHTML = `
+                ${crypto.quantity} - ${crypto.name} ${crypto.priceEUR.toFixed(2)} € / ${crypto.priceUSD.toFixed(2)} $
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Total: ${totalEUR.toFixed(2)} € / ${totalUSD.toFixed(2)} $
+                <div class="alert-container">
+                    <label class="alert-label">Seuil d'alerte (€):</label>
+                    <input type="number" value="${crypto.alertThreshold || ''}" class="small-input" onchange="setAlertThreshold(${index}, this.value)">
+                </div>
+                <button class="remove-btn" onclick="removeCrypto(${index})">Supprimer</button>
+            `;
+            portfolioList.appendChild(listItem);
+            totalValueEUR += totalEUR;
+            totalValueUSD += totalUSD;
+        });
 
-totalValueDisplay.textContent = `Valeur Totale du Portefeuille : ${totalValueEUR.toFixed(2)} € / ${totalValueUSD.toFixed(2)} $`;
-}
+        totalValueDisplay.textContent = `Valeur Totale du Portefeuille : ${totalValueEUR.toFixed(2)} € / ${totalValueUSD.toFixed(2)} $`;
+    }
 
-function setAlertThreshold(index, value) {
-portfolio[index].alertThreshold = parseFloat(value);
-savePortfolio();
-}
+    function setAlertThreshold(index, value) {
+        portfolio[index].alertThreshold = parseFloat(value);
+        savePortfolio();
+    }
 
-async function checkAlerts() {
-for (let crypto of portfolio) {
-if (crypto.alertThreshold !== null) {
-const currentPrice = await fetchCryptoPrice(crypto.id);
-if (currentPrice && currentPrice.current_price.eur >= crypto.alertThreshold) {
-alert(`🚨 Alerte ! ${crypto.name} a atteint le seuil d'alerte.`);
-crypto.alertThreshold = null;
-}
-}
-}
-savePortfolio();
-}
+    async function checkAlerts() {
+        for (let crypto of portfolio) {
+            if (crypto.alertThreshold !== null) {
+                const currentPrice = await fetchCryptoPrice(crypto.id);
+                if (currentPrice && currentPrice.current_price.eur >= crypto.alertThreshold) {
+                    alert(`🚨 Alerte ! ${crypto.name} a atteint le seuil d'alerte.`);
+                    crypto.alertThreshold = null;
+                }
+            }
+        }
+        savePortfolio();
+    }
 
-setInterval(checkAlerts, 30000);
+    setInterval(checkAlerts, 30000);
 
-function removeCrypto(index) {
-portfolio.splice(index, 1);
-savePortfolio();
-displayPortfolio();
-}
+    function removeCrypto(index) {
+        portfolio.splice(index, 1);
+        savePortfolio();
+        displayPortfolio();
+    }
 
-displayPortfolio();
+    displayPortfolio();
+
+    async function updateCryptoPrices() {
+        try {
+            for (let i = 0; i < portfolio.length; i++) {
+                const crypto = portfolio[i];
+                const cryptoData = await fetchCryptoPrice(crypto.id);
+                if (cryptoData) {
+                    crypto.priceEUR = cryptoData.current_price.eur;
+                    crypto.priceUSD = cryptoData.current_price.usd;
+                }
+            }
+            savePortfolio();
+            displayPortfolio();
+            console.log('Mise à jour des cours effectuée');
+        } catch (error) {
+            console.error('Erreur lors de la mise à jour des cours :', error);
+        }
+    }
+
+    // Appel de la fonction toutes les 5 minutes (300000 millisecondes)
+    setInterval(updateCryptoPrices, 300000);
 </script>
 </body>
 </html>
